Style : Fixed overflowing issue of input div

--- a/src/components/tasks/TaskSearch/tasksearch.module.scss
+++ b/src/components/tasks/TaskSearch/tasksearch.module.scss
@@ -132,6 +132,15 @@ $radius: 5px;
     @media (max-width: 557px) {
         width: 100% !important;
     }
+    @media (max-width: 562px) and (min-width: 558px) {
+        min-width: 302px !important;
+    }
+    @media (max-width: 617px) and (min-width: 601px) {
+        min-width: 310px !important;
+    }
+    @media (max-width: 793px) and (min-width: 769px) {
+        min-width: 328px !important;
+    }
 }
 .pill-input-wrapper {
     width: 100%;
